# agentic-ai-engineering

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
.playwright-mcp/: page-2026-07-23T14-36-28-425Z.yml  page-2026-07-23T14-36-57-537Z.yml  page-2026-07-23T14-37-21-852Z.yml  page-2026-07-23T14-37-31-855Z.yml  page-2026-07-23T14-37-49-347Z.yml  page-2026-07-23T14-51-35-834Z.yml  page-2026-07-23T14-51-51-320Z.yml  page-2026-07-23T14-52-06-899Z.yml  page-2026-07-23T14-52-16-601Z.yml  page-2026-07-23T14-53-18-818Z.yml  page-2026-07-23T14-53-37-101Z.yml  page-2026-07-23T14-53-52-742Z.yml
week 1/: 1_calling_openai_api.py  4_chatbot_for_personal_website.py
week 1/assets/: newsletter.csv
week_1/: 1_calling_openai_api.py  3_calling_and_judging_multiple_models.py  4_chatbot_for_personal_website.py
week_1/assets/: details.txt
week_2/: 1_kitchen_agent.py  2_project_manager.py  4_ai_research_agent.py
week_3/ai_blog_publisher/: README.md  article.md  pyproject.toml  report.md
week_3/ai_blog_publisher/src/ai_blog_publisher/: crew.py  main.py
week_3/ai_blog_publisher/src/ai_blog_publisher/config/: agents.yaml  tasks.yaml
week_3/research_document_generator/: README.md  pyproject.toml  report.md
week_3/research_document_generator/src/research_document_generator/: crew.py  main.py
week_3/research_document_generator/src/research_document_generator/config/: agents.yaml  tasks.yaml
week_3/research_document_generator/src/research_document_generator/tools/: execute_python.py
week_4/: 1_langchain_core.py  2_langgraph_search_chatbot.py  3_browser_research_agent.py  4_github_repo_analyzer.py
