[project]
name = "agentic-ai-engineering-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "nicegui>=3.14.0",
    "openai>=2.44.0",
    "openai-agents>=0.18.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "resend>=2.32.2",
]
