[project]
name = "ai_blog_publisher"
version = "0.1.0"
description = "ai_blog_publisher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.15.2,<2.0.0",
    "exa-py>=2.16.0",
]

[project.scripts]
ai_blog_publisher = "ai_blog_publisher.main:run"
run_crew = "ai_blog_publisher.main:run"
train = "ai_blog_publisher.main:train"
replay = "ai_blog_publisher.main:replay"
test = "ai_blog_publisher.main:test"
run_with_trigger = "ai_blog_publisher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
